# cay-bang-grocery-api/src/main/java/com/springboot/project/controller/OrderController.java
@@ -2,12 +2,15 @@ package com.springboot.project.controller;
 
 import com.springboot.project.generated.api.OrderApi;
 import com.springboot.project.generated.model.OrderDetail;
+import com.springboot.project.generated.model.OrderFilterResult;
 import com.springboot.project.generated.model.OrderRequest;
 import com.springboot.project.service.OrderService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.Optional;
 
 @RestController
 public class OrderController implements OrderApi {
@@ -22,6 +25,12 @@ public class OrderController implements OrderApi {
     @Override
     public ResponseEntity<OrderDetail> createOrder(OrderRequest orderRequest) {
         return new ResponseEntity<>(this.orderService.createOrder(orderRequest), HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<OrderFilterResult> getOrders(Optional<Integer> pageNumber, Optional<Integer> pageSize) {
+        OrderFilterResult orderFilterResult = this.orderService.getOrders(pageNumber.orElse(0), pageSize.orElse(10));
+        return new ResponseEntity<>(orderFilterResult, HttpStatus.OK);
     }
 
 
